# libsqlite3-hotbundle

./: Cargo.toml  README.md  build.rs  upgrade.sh
sqlite3/: bindgen_bundled_version.rs  bindgen_bundled_version_ext.rs
src/: lib.rs
