[package]
name = "libsqlite3-hotbundle"
version = "1.470200.0"
authors = ["The rusqlite developers"]
edition = "2021"
repository = "https://github.com/mumbleskates/libsqlite3-hotbundle"
description = "Native bindings to the libsqlite3 library"
license = "MIT"
links = "sqlite3"
build = "build.rs"
keywords = ["sqlite", "ffi"]

[features]
default = []
buildtime_bindgen = ["bindgen", "pkg-config", "vcpkg"]
double-quoted-string-literals = []
# Bundle only the bindings file. Note that this does nothing if
# `buildtime_bindgen` is enabled.
bundled_bindings = []
loadable_extension = ["prettyplease", "quote", "syn"]
# sqlite3_unlock_notify >= 3.6.12
unlock_notify = []
# 3.13.0
preupdate_hook = ["buildtime_bindgen"]
# 3.13.0
session = ["preupdate_hook", "buildtime_bindgen"]
with-asan = []
wasm32-wasi-vfs = []

bundled = ["__ignore"]
bundled-windows = ["__ignore"]
in_gecko = ["__ignore"]
__ignore = []

bundled-sqlcipher = ["__unsupported"]
bundled-sqlcipher-vendored-openssl = ["__unsupported"]
sqlcipher = ["__unsupported"]
__unsupported = []

[dependencies]
openssl-sys = { version = "0.9.103", optional = true }

[build-dependencies]
bindgen = { version = "0.70", optional = true, default-features = false, features = ["runtime"] }
pkg-config = { version = "0.3.19", optional = true }
cc = { version = "1.1.6", optional = true }
vcpkg = { version = "0.2.15", optional = true }
# for loadable_extension:
prettyplease = {version = "0.2.20", optional = true }
# like bindgen
quote = { version = "1.0.36", optional = true, default-features = false }
# like bindgen
syn = { version = "2.0.72", optional = true, features = ["full", "extra-traits", "visit-mut"] }
