[package]
name = "libsqlite3-hotbundle"
version = "1.470200.0"
authors = [
    "Kent Ross",
    "The rusqlite developers",
]
edition = "2021"
repository = "https://github.com/mumbleskates/libsqlite3-hotbundle"
description = "bundled libsqlite3 library"
license = "MIT"
links = "sqlite3"
build = "build.rs"
keywords = ["sqlite", "ffi"]

[features]
default = []
double-quoted-string-literals = []
unlock_notify = []
session = []
with-asan = []
wasm32-wasi-vfs = []

[build-dependencies]
cc = { version = "1.2.4" }
